--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "set PORT=3000 && react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
