--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-bootstrap": "^2.3.0",
         "react-dom": "^18.0.0",
         "react-fusioncharts": "^3.1.2",
+        "react-hook-form": "^7.30.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "^2.1.3",
         "web-vitals": "^2.1.4"
