--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
     "public": "build",
+    "site": "finance-bot-cae6d",
     "ignore": [
       "firebase.json",
       "**/.*",
